--- a/ibm-services/src/main/resources/application.properties
+++ b/ibm-services/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ibm-db
+spring.datasource.url=jdbc:mysql://localhost:3306/estimator
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.jpa.show-sql=true
